@@ -64,6 +64,12 @@ task checkAsciidocLinks {
 
 asciidoctorPdf {
 	dependsOn checkAsciidocLinks
+
+	inProcess = JAVA_EXEC
+	forkOptions {
+		jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED'
+	}
+
 	baseDirFollowsSourceFile()
 	configurations 'asciidoctorExt'
 
